# Scientific_inquiries

./: README.md
ANN01/: CDataType.h  CMakeLists.txt  CNetwork.cpp  CNetwork.h  Cmnist_loader.cpp  Cmnist_loader.h  main.cpp  utility.h
DeepLearningPython35/: explore_svm.py  mnist_loader.py  network.py  network3.py  test.py
NUCE427Lab02/: CMakeLists.txt  G4History.macro  NUCE427Lab02.cc  init_vis.mac  run.mac  run1.mac  vis.mac
NUCE427Lab02/data/: Comparison_ Au_198_decay_Geant4_Experiment.docx  output_0.root  output_Scoring_Au_198.xlsx
NUCE427Lab02/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SensitiveDetector.hh  StackingAction.hh  SteppingAction.hh
NUCE427Lab02/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SensitiveDetector.cc  StackingAction.cc  SteppingAction.cc
NUCE427Lab03/: CMakeLists.txt  NUCE427Lab03_main.cc  vis.mac  vis.origin
NUCE427Lab03/docs/: final_report_draft_one.docx
NUCE427Lab03/include/: CLab03ActionInitialization.hh  CLab03DetectorConstruction.hh  CLab03EventAction.hh  CLab03PhysicsList.hh  CLab03PrimaryGeneratorAction.hh  CLab03Run.hh  CLab03RunAction.hh  CLab03SteppingAction.hh
NUCE427Lab03/src/: CLab03ActionInitialization.cc  CLab03DetectorConstruction.cc  CLab03EventAction.cc  CLab03PhysicsList.cc  CLab03PrimaryGeneratorAction.cc  CLab03Run.cc  CLab03RunAction.cc  CLab03SteppingAction.cc  Hist.cc
NUCE427Lab04/: CMakeLists.txt  NUCE427Lab04_main.cc  run.mac  visualize.mac
ann/: CMakeLists.txt  Makefile_manual  README.md
ann/data/: example.txt  train_weight.txt
ann/doc/: ann_activity_diagram.txt  ann_design.txt  ann_usecase.txt
ann/include/: common.hpp  data.hpp  data_handler.hpp  helper_funtion.hpp  layer.hpp  matrix.hpp  network.hpp  neuron.hpp  training_handler.hpp
ann/src/: common.cpp  data.cpp  data_handler.cpp  helper_function.cpp  layer.cpp  main.cpp  network.cpp  neuron.cpp  training_handler.cpp
bragg_curve/: CMakeLists.txt  main.cc  waterTank_histogram.C
cherenkov_radiaion_simulation/: CMakeLists.txt  CherenkovActionInitialization.cc  CherenkovActionInitialization.hh  CherenkovDetectorConstruction.cc  CherenkovDetectorConstruction.hh  CherenkovEventAction.cc  CherenkovEventAction.hh  CherenkovPhysicList.cc  CherenkovPhysicList.hh  CherenkovPrimaryGenerator.cc  CherenkovPrimaryGenerator.hh  CherenkovRunAction.cc  CherenkovRunAction.hh  CherenkovSensitiveDetector.cc  CherenkovSensitiveDetector.hh  CherenkovSimulationMain.cc  CherenkovSteppingAction.cc  CherenkovSteppingAction.hh  cherenkov_run.mac
cherenkov_radiaion_simulation/data/: SimulationCherenkovRadiation.docx  cherenkov_angle.odt
cnn_keras_tf/: cat_dog_cnn_tf.py  data_augment.py  digit_cnn_tf_01.py  digit_cnn_tf_class.py  digit_cnn_vgg16_03.py  eng_check_list.txt  examp_cnn_tf.py  helper_func.py  test_data.py  train_data.py
cnn_libtorch/: CMakeLists.txt  cnn_classify_main.cpp  cnn_classify_network.hpp  cnn_mnist_main.cpp  cnn_mnist_network.hpp  cnn_vgg_16_main.cpp  cnn_vgg_16_network.hpp
cnn_libtorch/edu/: CAlexnet.hpp  attempt_01.cpp  attempt_02.cpp  trial_cnn.hpp
cnn_matlab/: Image_Detect_Number_start_finish.m  Yolo_Object_Detection_start_finish.m  Yolo_buoy_run_2GT.m  augmentData.m  eng_check_list.txt  (+4 more)
machine_learning/ONNX-RESNET-DIGIT-RECOGNITION/: CMakeLists.txt  Helpers.h  cnn_run.py  convolutional_neural_network_train.py  imagenet_classes.txt
machine_learning/ONNX-RESNET50/: CMakeLists.txt  Helpers.cpp  OnnxRuntimeResNet.cpp
machine_learning/activity_1/: CMakeLists.txt  CMakeLists.txt.orig  detecting-object.py  detectingobject_main.back  detectingobject_main.cpp  finding-mask.py  findingmask_main.cpp
machine_learning/yolo_3_opencv/: CMakeLists.txt  yolo-3-camera.py  yolo-3-image.py  yolo-3-video.py  yolo3_camera_main.cpp
machine_learning/yolov5_course/onnx_yolov5_opencv_worked/: CMakeLists.txt  main.cpp
machine_learning/yolov5_course/onnx_yolov5_opencv_worked/config_files/: classes_best.txt
machine_learning/yolov5_course/onnx_yolov5_opencv_worked/include/: help.hpp
machine_learning/yolov5_course/onnx_yolov5_opencv_worked/src/: help.cpp
penhaun_svm/: CMakeLists.txt  main.cpp  penhaun_svm.cpp  penhaun_svm.h
penhaun_svm/libsvm/: FAQ.html  Makefile
radioactive_decay_Co_60/radioactive_decay_Co_60_beta_energy_spectrum/: CMakeLists.txt  RadioactiveDecayActionInitialization.cc  RadioactiveDecayActionInitialization.hh  RadioactiveDecayDetectorConstruncion.cc  RadioactiveDecayDetectorConstruncion.hh  RadioactiveDecayEventAction.cc  RadioactiveDecayEventAction.hh  RadioactiveDecayHistoManager.cc  RadioactiveDecayHistoManager.hh  RadioactiveDecayMain.cc  RadioactiveDecayPhysicList.cc  RadioactiveDecayPhysicList.hh  RadioactiveDecayPrimaryGenerator.cc  RadioactiveDecayPrimaryGenerator.hh  RadioactiveDecayRun.cc  RadioactiveDecayRun.hh  RadioactiveDecayTrackingAction.cc  RadioactiveDecayTrackingAction.hh  RadioactiveDecayTrackingMessenger.cc  RadioactiveDecayTrackingMessenger.hh  RadioactiveRunAction.cc  RadioactiveRunAction.hh  visualize.mac
radioactive_decay_Co_60/radioactive_decay_Co_60_beta_energy_spectrum/data/: Co60.mac  Co60.root  SimulationRadioactiveDecay.docx  beta_decay_beta_energy-spectrium.odt
scientific_computing/Qt5_framework/Qt_Designpattrens/: CMakeLists.txt  main.cpp
scientific_computing/Qt5_framework/Qt_Designpattrens/include/: pool.h  worker.h
scientific_computing/Qt5_framework/Qt_Designpattrens/src/: worker.cpp
scientific_computing/Qt5_framework/Qt_LibrariesSharedExternal/: CMakeLists.txt  main.cpp
scientific_computing/Qt5_framework/Qt_LibrariesSharedExternal/Headers/: mylib.h
scientific_computing/Qt5_framework/Qt_LibraryStatic/mylib/: CMakeLists.txt  mylib.pro
scientific_computing/Qt5_framework/Qt_LibraryStatic/mylib/include/: mylib.h
scientific_computing/Qt5_framework/Qt_LibraryStatic/mylib/src/: mylib.cpp
scientific_computing/Qt5_framework/network/fortune_server/: CMakeLists.txt  README.md  main.cpp  server.cpp  server.h
(+636 files in other folders)
